# relay

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE
server/: BUILD  hello_world.cpp
src/: CMakeLists.txt
src/communication/: CMakeLists.txt  bidi_tcp_client_test.cpp  bidi_tcp_server_test.cpp  fake_vehicle_node.cpp  hello_world.cpp  relay_server.cpp  shm_test.cpp  vehicle_communicator_client.cpp  vehicle_communicator_server.cpp  websocket_relay.cpp
src/communication/bidi_socket/: CMakeLists.txt  bidi_tcp_socket.cpp  bidi_tcp_socket.h
src/communication/include/: bidi_tcp_socket.h
src/communication/messages/: messages.h
src/communication/metadata_streamer/: CMakeLists.txt  shm_socket.h
src/communication/modi_socket/: CMakeLists.txt  packet_header.h  receive_interface.h  tcp_receive_socket.cpp  tcp_receive_socket.h  tcp_send_socket.cpp  tcp_send_socket.h  udp_receive_socket.cpp  udp_receive_socket.h  udp_send_socket.cpp  udp_send_socket.h
src/communication/modi_socket/fec/: CMakeLists.txt  fec_decoder.cpp  fec_decoder.h
src/communication/src/: bidi_tcp_socket.cpp
src/resources/jsmpeg_client/: index.html  jsmpeg-vnc.js
src/resources/samples/: CMakeLists.txt
src/scripts/: CMakeLists.txt  local_hevc_stream_test.sh  local_hevc_visualizer_test.sh  local_sample_udp_test.sh  local_sample_visualizer_test.sh  local_stream_test.sh  local_vehicle_control_test.sh  tcp_hevc_connection.sh
src/server/: CMakeLists.txt  hello_world.cpp
src/streaming/: CMakeLists.txt  codec_test.cpp  hevc_codec_test.cpp  hevc_sync_codec_test.cpp  jsmpeg_sender.cpp  nv_hevc_receiver.cpp  nv_hevc_sender.cpp  receiver.cpp  sample_nv_hevc_sender.cpp  sample_nv_hevc_udp_sender.cpp  sample_sender.cpp  sender.cpp  stream_test.cpp  websocket_relay.cpp
src/streaming/camera_grabber/: CMakeLists.txt  camera_grabber.cu  camera_grabber.h  camera_test.cpp
src/streaming/codec/: CMakeLists.txt  async_payload_framework.cpp  async_payload_framework.h  h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h  jsmpeg_encoder.cpp  jsmpeg_encoder.h  nv_hevc_decoder.cpp  nv_hevc_decoder.h  nv_hevc_encoder.cpp  nv_hevc_encoder.h  nv_hevc_sync_decoder.cpp  nv_hevc_sync_decoder.h  nv_hevc_sync_encoder.cpp  nv_hevc_sync_encoder.h
src/streaming/codec/nvcodec/: CMakeLists.txt  NvCodecUtils.h  NvDecoder.cpp  NvDecoder.h  NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h
src/streaming/codec/nvdecoder/: CMakeLists.txt  NvDecoder.cpp  NvDecoder.h
src/streaming/codec/nvencoder/: CMakeLists.txt
src/streaming/image_processing/: CMakeLists.txt  image_processing.cu  image_processing.h
src/visualization/: CMakeLists.txt  camera_gl_canvas.h  control_panel.h  dash_board.h  hevc_udp_visualizer.cpp  hevc_visualizer.cpp  nanogui_includes.h  nanovg_example.cpp  visualizer.h
